[tool.poetry]
name = "schumi543"
version = "0.1.0"
description = "cli tool for clickup"
authors = ["Schumi543 <12729148+Schumi543@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
